upgrade deps, fix IMS# cutoff problem (#462)

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -367,3 +367,7 @@ h1 {
 .white-space-pre-wrap {
   white-space: pre-wrap !important;
 }
+
+.mw-4rem {
+  min-width: 4rem !important;
+}
